2008-10-17 Carlo Baldassi <carlobaldassi@gmail.com>
	* bugfix: forbid going below 50% of original size
	  in ``LqR+LqR back'' mode
2008-10-14 Carlo Baldassi <carlobaldassi@gmail.com>
	* modified : split of interface.c code, some cleanup
2008-08-03 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : info icons for newly created masks
2008-08-01 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : discard mask is ignored by default when
	  enlarging, added option + warning icon
	* new : added overall reset button
2008-07-31 Carlo Baldassi <carlobaldassi@gmail.com>
	* bugfix : fixed memory leaks when reading masks
	* bugfix : protected a memory call when writing
	  seams
2008-07-29 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : added GAP support for animations
2008-07-28 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : added reset and revert buttons
	* modified : now retains last used width and height
	  if operating on the same layer
	* bugfix : round width and height values
2008-02-20 Carlo Baldassi <carlobaldassi@gmail.com>
	* new : introduced the rigidity mask interface
2008-01-14 Carlo Baldassi <carlobaldassi@yahoo.it>
	* bugfix : fixed configure.ac
2007-12-07 Carlo Baldassi <carlobaldassi@yahoo.it>
        * modified : stripped the library
2007-11-26 Carlo Baldassi <carlobaldassi@yahoo.it>
	* modified : reorganized code in order to completely separate
	  the UI from the carving library
2007-11-20 Carlo Baldassi <carlobaldassi@yahoo.it>
	* new : seam max step option
	* new : auto size button for object removal
	* new : added new operational modes (LqR back, scale back)
	* new : added rescale order option
	* bugfix : layer validity check is now working in GIMP 2.4
	* bugfix : all layers are now transposed correctly
2007-11-09 Carlo Baldassi <carlobaldassi@yahoo.it>
	* modified : global optimization of the core (removed
	  the LqrData class, turned r->raw into an array of ints, various
	  others)
	* modified : added PANGO_ELLIPSIZE_START to the combo boxes